force-app/main/default/objects/Error__c/Error__c.object-meta.xml
<CustomObject>
    <description>Custom error object for logging errors from code.</description>
    <label>Error</label>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>