force-app/main/default/objects/Error__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The class where the error originated.</description>
    <inlineHelpText>The class where the error originated.</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>