force-app/main/default/objects/Error__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>A unique error code that can be used for postprocessing of this error, i.e., determining if a Case should be generated.</description>
    <inlineHelpText>A unique error code that can be used for postprocessing of this error.</inlineHelpText>
    <label>Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>