force-app/main/default/objects/Error__c/fields/Developer_Message__c.field-meta.xml
<CustomField>
    <fullName>Developer_Message__c</fullName>
    <description>A custom message from the developer.</description>
    <inlineHelpText>A custom message from the developer.</inlineHelpText>
    <label>Developer Message</label>
    <type>TextArea</type>
</CustomField>