force-app/main/default/objects/Error__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>e?.getTypeName()</description>
    <inlineHelpText>e?.getTypeName()</inlineHelpText>
    <label>Exception Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>