force-app/main/default/objects/Error__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>The Line Number from the Exception</description>
    <inlineHelpText>The Line Number from the Exception</inlineHelpText>
    <label>Line Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>