force-app/main/default/objects/Error__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Technical error message returned from the error.</description>
    <inlineHelpText>Technical error message returned from the error.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>