force-app/main/default/objects/Error__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The method where this issue originated.</description>
    <inlineHelpText>The method where this issue originated.</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>