force-app/main/default/objects/Error__c/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <description>ID of the record or records</description>
    <inlineHelpText>ID of the record or records</inlineHelpText>
    <label>Record Id(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>