force-app/main/default/objects/Error__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace from the Exception.</description>
    <inlineHelpText>Stack trace from the Exception.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>