force-app/main/default/objects/Error__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of error logged.</description>
    <inlineHelpText>Type of error logged.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Apex (DML)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>